# supply_chain_tool

./: main.py  pyproject.toml  run_reports.py  run_swh_ana.py  run_tool.py  run_utils.py
cmd/: baisc_api_to_mo.py  loadind_list_ex.py  loading_list_ex_2.py  smw_demand.py  swh_review.py  upload_loading_list_to_pb.py
cmd/reports/: report_swh_vs_sap.py
migrate/: swh_to_pkg_id.py
util/: get_wo_pn_deliver_to_production.py  smw_stock.py  wo_details.py
