[project]
name = "supply-chain-tool"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "ruff>=0.15.2",
]
